--- a/cmake/info.json.in
+++ b/cmake/info.json.in
@@ -1,8 +1,9 @@
 {
-  "schemaVersion": 1,
+  "schemaVersion": "1.0",
   "artifacts": {
     "ATenCXX": {
       "version": "@PROJECT_VERSION@",
+      "type": "library",
       "variants": [
         {
           "path": "@SPM_TRIPLE@",
