Make sure the libtorch headers are also copied and added to the search path in info.json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,10 +112,12 @@ if(BUILD_SPM_ARTIFACT)
       COMMAND ${CMAKE_COMMAND} -E make_directory "${SPM_BUNDLE_PARENT}"
       COMMAND ${CMAKE_COMMAND} -E make_directory "${SPM_BUNDLE_DIR}"
       COMMAND ${CMAKE_COMMAND} -E make_directory "${SPM_VARIANT_ROOT}"
+      COMMAND ${CMAKE_COMMAND} -E make_directory "${SPM_VARIANT_ROOT}/libtorch"
       COMMAND ${CMAKE_COMMAND} -E make_directory "${SPM_LIB_DIR}"
       COMMAND ${CMAKE_COMMAND} -E make_directory "${SPM_INCLUDE_DIR}"
       COMMAND ${CMAKE_COMMAND} -E copy "$<TARGET_FILE:ATenCXX>" "${SPM_LIB_DIR}/"
       COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/ATenCXX/include" "${SPM_INCLUDE_DIR}"
+      COMMAND ${CMAKE_COMMAND} -E copy_directory "${LIBTORCH_ROOT}/include" "${SPM_VARIANT_ROOT}/libtorch/include"
       COMMAND ${CMAKE_COMMAND} -E copy_directory "${LIBTORCH_ROOT}/lib" "${SPM_VARIANT_ROOT}/libtorch/lib"
       COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_BINARY_DIR}/info.json" "${SPM_BUNDLE_DIR}/info.json"
       COMMAND ${CMAKE_COMMAND} -E chdir "${SPM_BUNDLE_PARENT}" ${CMAKE_COMMAND} -E tar "cfv" "${SPM_BUNDLE_DIR}.zip" --format=zip "ATenCXX.artifactbundle"
