--- a/.github/workflows/build-artifactbundles.yml
+++ b/.github/workflows/build-artifactbundles.yml
@@ -74,7 +74,7 @@ jobs:
           ~/.swiftly/bin/swiftly init --quiet-shell-followup --skip-install --assume-yes
           . "${SWIFTLY_HOME_DIR:-$HOME/.swiftly}/env.sh"
           hash -r
-          swiftly install ${SWIFT_VERSION} --assume-yes -use
+          swiftly install ${SWIFT_VERSION} --assume-yes --use
           . "${SWIFTLY_HOME_DIR:-$HOME/.swiftly}/env.sh"
           hash -r
           rm swiftly.pkg
