--- a/.github/workflows/build-artifactbundles.yml
+++ b/.github/workflows/build-artifactbundles.yml
@@ -71,7 +71,7 @@ jobs:
           export PATH="$(brew --prefix gnu-getopt)/bin:$PATH"
           curl -O https://download.swift.org/swiftly/darwin/swiftly.pkg
           installer -pkg swiftly.pkg -target CurrentUserHomeDirectory
-          ~/.swiftly/bin/swiftly init --quiet-shell-followup --skip-install --assume-yes
+          ~/.swiftly/bin/swiftly init --quiet-shell-followup
           . "${SWIFTLY_HOME_DIR:-$HOME/.swiftly}/env.sh"
           hash -r
           swiftly install ${SWIFT_VERSION} --assume-yes --use
@@ -80,6 +80,7 @@ jobs:
           rm swiftly.pkg
           echo "✅ Swift ${SWIFT_VERSION} installed successfully"
           swift --version
+
 
       - name: Install Swift via Swiftly (Linux)
         if: startsWith(matrix.os, 'ubuntu') && steps.cache-swift-linux.outputs.cache-hit != 'true'
