--- a/.github/workflows/build-artifactbundles.yml
+++ b/.github/workflows/build-artifactbundles.yml
@@ -23,7 +23,7 @@ jobs:
             triple: x86_64-unknown-linux-gnu
             libtorch: "2.9.1"
           - name: macos-arm64-cpu
-            os: macos-14
+            os: macos-15
             compute: macos-arm64
             triple: arm64-apple-macosx
             libtorch: "2.9.1"
@@ -71,7 +71,7 @@ jobs:
           export PATH="$(brew --prefix gnu-getopt)/bin:$PATH"
           curl -O https://download.swift.org/swiftly/darwin/swiftly.pkg
           installer -pkg swiftly.pkg -target CurrentUserHomeDirectory
-          ~/.swiftly/bin/swiftly init 
+          ~/.swiftly/bin/swiftly init --quiet-shell-followup --skip-install
           . "${SWIFTLY_HOME_DIR:-$HOME/.swiftly}/env.sh"
           hash -r
           swiftly install ${SWIFT_VERSION} --assume-yes --use
