Separated build and release steps.

--- a/.github/workflows/build-artifactbundles.yml
+++ b/.github/workflows/build-artifactbundles.yml
@@ -142,10 +142,22 @@ jobs:
           name: ATenCXX-${{ matrix.triple }}-${{ matrix.compute }}-v${{ matrix.libtorch }}
           path: artifacts/${{ matrix.triple }}-${{ matrix.compute }}-v${{ matrix.libtorch }}/ATenCXX.artifactbundle.zip*
 
+  release:
+    name: Publish GitHub Release Assets
+    if: github.ref_type == 'tag'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+          pattern: ATenCXX-*
+          merge-multiple: true
+
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
-        if: github.ref_type == 'tag'
         with:
           files: |
-            artifacts/${{ matrix.triple }}-${{ matrix.compute }}-v${{ matrix.libtorch }}/ATenCXX.artifactbundle.zip
-            artifacts/${{ matrix.triple }}-${{ matrix.compute }}-v${{ matrix.libtorch }}/ATenCXX.artifactbundle.zip.checksum
+            artifacts/**/ATenCXX.artifactbundle.zip
+            artifacts/**/ATenCXX.artifactbundle.zip.checksum
